# gtkmm-project

./: README.md  init.sh
src/: CMakeLists.txt  application.cpp  application.h  main.cpp
